# miden-bank

./: Cargo.toml  README.md
contracts/bank-account/: Cargo.toml
contracts/bank-account/src/: lib.rs
contracts/deposit-note/: Cargo.toml
contracts/deposit-note/src/: lib.rs
contracts/init-tx-script/: Cargo.toml
contracts/init-tx-script/src/: lib.rs
contracts/withdraw-request-note/: Cargo.toml
contracts/withdraw-request-note/src/: lib.rs
integration/: Cargo.toml
integration/src/: helpers.rs
integration/tests/: deposit_test.rs  withdraw_test.rs
